--- a/Makefile.win32
+++ b/Makefile.win32
@@ -1,7 +1,7 @@
 # Simple makefile for gcc written by stext editor.
 CC=i686-w64-mingw32-gcc
-CFLAGS=-std=c11 -W -O -g -I./libprs/include
-LDFLAGS=-lkernel32 -luser32 -L./libprs/build -lprs
+CFLAGS=-std=c11 -W -O -g -I./libprs/include -I./src
+LDFLAGS=-lkernel32 -luser32 -L./libprs/build -L. -lprs
 
 LIBPRS=$(shell find . -iname "libprs" -type d)
 BACKUPS=$(shell find . -iname "*.bak")
@@ -14,20 +14,30 @@ SOURCE=$(wildcard *.c)
 OBJECTS=$(SOURCE:%.c=%.c.o)
 TARGET=plugin.exe
 
+SOURCE2=$(wildcard src/*.c)
+OBJECTS2=$(SOURCE2:%.c=%.c.o)
+TARGET2=pluginmanager.dll
+
 .PHONY: all install uninstall clean  distclean dist
 all: $(TARGET)
 	cd plugins && $(MAKE) all
 
 libprs:
-	echo "Downloading dependency..."
+	echo Downloading dependency...
 	git clone https://github.com/psimonson/libprs.git && echo Done. || echo Failed.
-	cd libprs && ./build.sh testing win32
+	(cd libprs && ./build.sh testing win32) && echo Done. || echo Failed
 
 %.c.o: %.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
-$(TARGET): libprs $(OBJECTS)
-	$(CC) $(CFLAGS) -o $@ $(OBJECTS) $(LDFLAGS)
+src/%.c.o: src/%.c
+	$(CC) $(CFLAGS) -fPIC -c -o $@ $<
+
+$(TARGET2): libprs $(OBJECTS2)
+	$(CC) $(CFLAGS) -shared -o $@ $(OBJECTS2) $(LDFLAGS)
+
+$(TARGET): libprs $(TARGET2) $(OBJECTS)
+	$(CC) $(CFLAGS) -o $@ $(OBJECTS) $(LDFLAGS) $(TARGET2)
 
 install: all
 	install $(TARGET) $(DESTDIR)/$(PREFIX)/bin
@@ -37,7 +47,7 @@ uninstall:
 
 clean:
 	cd plugins && $(MAKE) clean
-	rm -f $(OBJECTS) $(TARGET)
+	rm -f $(OBJECTS2) $(TARGET2) $(OBJECTS) $(TARGET)
 
 distclean: clean
 	cd plugins && $(MAKE) distclean
