main.c is now a simple shell and changed name of executable in Makefiles

--- a/Makefile.win32
+++ b/Makefile.win32
@@ -12,7 +12,7 @@ VERSION=1.0
 
 SOURCE=$(wildcard *.c)
 OBJECTS=$(SOURCE:%.c=%.c.o)
-TARGET=plugin.exe
+TARGET=shell-example.exe
 
 SOURCE2=$(wildcard src/*.c)
 OBJECTS2=$(SOURCE2:%.c=%.c.o)
